<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kios_interface</name>
  <version>1.0.0</version>
  <description>The Ros2 Interfaces for KIOS</description>
  <maintainer email="jicong.ao@tum.de">blackbird</maintainer>
  <license>BBLAB</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- interface-action dependent -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>action_msgs</depend>
  <!-- <member_of_group>rosidl_interface_packages</member_of_group> -->
  
  <!-- interface-msg dependent -->
  <!-- <buildtool_depend>rosidl_default_generators</buildtool_depend> -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>  


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
