<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kios_py</name>
  <version>1.0.0</version>
  <description>Python package of KIOS</description>
  <maintainer email="jicong.ao@tum.de">blackbird</maintainer>
  <license>BBLAB</license>

  <exec_depend>example_interfaces</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>kios_interface</exec_depend>
  <exec_depend>pysoem</exec_depend>
  <exec_depend>py_trees</exec_depend>
  
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
